Fix wrong colors for 'light' skin and overlay type Alert of 'neutral' skin
Enact-DCO-1.0-Signed-off-by: Seungcheon Baek (sc.baek@lge.com)

--- a/Alert/Alert.module.less
+++ b/Alert/Alert.module.less
@@ -118,11 +118,14 @@
 			--sand-bg-color: @sand-alert-overlay-bg-color;
 			--sand-text-color: @sand-alert-overlay-text-color;
 			--sand-text-sub-color: @sand-alert-overlay-text-sub-color;
-			--sand-shadow-color-rgb: @sand-alert-overlay-shadow-color-rgb;
 			--sand-focus-text-color: @sand-alert-overlay-focus-text-color;
+			--sand-disabled-selected-color: @sand-alert-overlay-disabled-selected-color;
+			--sand-disabled-selected-bg-color: @sand-alert-overlay-disabled-selected-bg-color;
+			--sand-disabled-selected-focus-color: @sand-alert-overlay-disabled-selected-focus-color;
+			--sand-disabled-selected-focus-bg-color: @sand-alert-overlay-disabled-selected-focus-bg-color;
 			--sand-progress-color-rgb: @sand-alert-overlay-progress-color-rgb;
 			--sand-progress-bg-color: @sand-alert-overlay-progress-bg-color;
-			--sand-checkbox-border-color: @sand-alert-overlay-checkbox-border-color;
+			--sand-checkbox-color: @sand-alert-overlay-checkbox-color;
 			--sand-checkbox-disabled-selected-color: @sand-alert-overlay-checkbox-disabled-selected-color;
 			--sand-formcheckboxitem-focus-text-color: @sand-alert-overlay-formcheckboxitem-focus-text-color;
 			--sand-item-disabled-focus-bg-color: @sand-alert-overlay-item-disabled-focus-bg-color;
