--- a/styles/colors-light.less
+++ b/styles/colors-light.less
@@ -9,28 +9,37 @@
 // UI Conceptual Colors
 // ---------------------------------------
 
-
+// common colors
 @sand-bg-color: var(--sand-bg-color, #cacbcc);
 @sand-text-color: var(--sand-text-color, #2e3239);
 @sand-text-sub-color: var(--sand-text-sub-color, #2e3239);
-@sand-shadow-color-rgb: var(--sand-shadow-color-rgb, 46, 50, 57); // #2e3239
 @sand-focus-text-color: var(--sand-focus-text-color, #575e66);
+@sand-disabled-selected-color: var(--sand-disabled-selected-color, #ffffff);
+@sand-disabled-selected-bg-color: var(--sand-disabled-selected-bg-color, #788688);
+@sand-disabled-selected-focus-color: var(--sand-disabled-selected-focus-color, #e6e6e6);
+@sand-disabled-selected-focus-bg-color: var(--sand-disabled-selected-focus-bg-color, #4c5059);
 @sand-overlay-bg-color-rgb: var(--sand-alert-overlay-bg-color-rgb, 187, 187, 187); // #bbbbbb
 @sand-progress-color-rgb: var(--sand-progress-color-rgb, 55, 58, 65); // #373a41
 @sand-progress-bg-color: var(--sand-progress-bg-color, #a1a1a166); // 40% alpha by default
+
+// component colors
+@sand-checkbox-color: var(--sand-checkbox-color, #858b92);
+@sand-item-disabled-focus-bg-color: var(--sand-item-disabled-focus-bg-color, #989ca2);
+@sand-keyguide-bg-color-rgb: var(--sand-keyguide-bg-color-rgb, @sand-overlay-bg-color-rgb);
 
 
 // Overlay Alert
 // --------------------------------------
 
+// common colors
 @sand-alert-overlay-bg-color-rgb: var(--sand-alert-overlay-bg-color-rgb, 0, 0, 0); // #000000
 @sand-alert-overlay-text-color: var(--sand-alert-overlay-text-color, #e6e6e6);
 @sand-alert-overlay-text-sub-color: var(--sand-alert-overlay-text-sub-color, #abaeb3);
-@sand-alert-overlay-shadow-color-rgb: var(--sand-alert-overlay-shadow-color-rgb, 0, 0, 0); // #000000
 @sand-alert-overlay-focus-text-color: var(--sand-alert-overlay-focus-text-color, #ffffff);
 
+// component colors
 @sand-alert-overlay-progress-color-rgb: var(--sand-alert-overlay-progress-color-rgb, 230, 230, 230); // #e6e6e6
 @sand-alert-overlay-progress-bg-color: var(--sand-alert-overlay-progress-bg-color, #373a41);
-@sand-alert-overlay-checkbox-border-color: var(--sand-alert-overlay-checkbox-border-color, #e6e6e6);
+@sand-alert-overlay-checkbox-color: var(--sand-alert-overlay-checkbox-color, #e6e6e6);
 @sand-alert-overlay-checkbox-disabled-selected-color: var(--sand-alert-overlay-checkbox-disabled-selected-color, #4c5059);
 @sand-alert-overlay-item-disabled-focus-bg-color: var(--sand-alert-overlay-item-disabled-focus-bg-color, #e6e6e6);
